Bug 444696 - [wayland] Can't activate global shortcuts whilst moving windows
Summary: [wayland] Can't activate global shortcuts whilst moving windows
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 5.23.2
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 433493 446017 447226 450491 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-10-31 06:54 UTC by indecisiveautomator
Modified: 2022-05-13 15:36 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description indecisiveautomator 2021-10-31 06:54:19 UTC
SUMMARY
On Wayland, grabbing a window with the mouse and attempting to switch virtual desktops with a keyboard shortcut (e.g., moving to the desktop left with Ctrl+Alt+LeftArrow), nothing happens.


STEPS TO REPRODUCE
1. Click to grab a window
2. Press keyboard shortcut to switch virtual desktops
3. Nothing happens

OBSERVED RESULT
While grabbing a window, pressing the keyboard shortcut to switch virtual desktops does nothing.


EXPECTED RESULT
When grabbing a window, pressing the keyboard shortcut to switch virtual desktops should perform the action, bringing the window with it, just as it does on X11.


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 5.14.14-arch1-1 (64bit)
KDE Plasma Version: 5.23.2
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Unable to reproduce under X11.
Comment 1 indecisiveautomator 2022-01-15 22:43:04 UTC
Still present in 5.23.90.
Comment 2 Nate Graham 2022-01-19 15:20:18 UTC
Can reproduce.
Comment 3 David Edmundson 2022-01-19 15:24:13 UTC
This also affects volume controls. Suspect our input filters need reordering.
Comment 4 Bug Janitor Service 2022-03-03 15:25:31 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2086
Comment 5 Zamundaaa 2022-03-03 15:58:38 UTC
*** Bug 450491 has been marked as a duplicate of this bug. ***
Comment 6 Nate Graham 2022-03-03 20:53:50 UTC
*** Bug 446017 has been marked as a duplicate of this bug. ***
Comment 7 Nate Graham 2022-03-03 20:53:55 UTC
*** Bug 447226 has been marked as a duplicate of this bug. ***
Comment 8 David Redondo 2022-04-19 13:52:32 UTC
*** Bug 433493 has been marked as a duplicate of this bug. ***
Comment 9 Arjen Hiemstra 2022-05-13 10:55:21 UTC
Git commit 79dfb1ff610fd3bedc67e71c87110cbb35aa7c68 by Arjen Hiemstra.
Committed on 13/05/2022 at 10:37.
Pushed by ahiemstra into branch 'master'.

input: Move MoveResize input filter after global shortcut input filter

This allows using global shortcuts while a move/resize is ongoing. Most
importantly, this allows moving a window to a different desktop by
picking it up and then using a global shortcut to move to a different
desktop.

M  +11   -0    src/effects.cpp
M  +1    -1    src/input.cpp

https://invent.kde.org/plasma/kwin/commit/79dfb1ff610fd3bedc67e71c87110cbb35aa7c68